# projeto-churn-academia

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  faker-academia.py  pyproject.toml
alembic/: env.py
alembic/versions/: 153518db0c35_initial_migration.py  d04af632110e_sync.py
app/: auth.py  main.py  modelo.py  security.py
app/messaging/: producer.py  producer_modelo.py  producer_relatorio.py  worker_checkin.py  worker_modelo.py  worker_relatorio_frequencia.py
app/models/: models.py
app/routers/: aluno_routes.py
app/schemas/: schemas.py
app/tasks/: scheduler.py
ml/: base_churn.xlsx  churn.ipynb  modelo_churn.pkl
relatorios/: relatorio_frequencia_2025-06-23.csv
scripts/: init_db.py
tests/: test_api.py  test_full_flow.py
